feat: food servings